fixed styling for dark mode and added some basic route in expo!

--- a/apps/expo/src/styles.css
+++ b/apps/expo/src/styles.css
@@ -1,7 +1,8 @@
-@import "tailwindcss/theme.css" layer(theme);
-@import "tailwindcss/preflight.css" layer(base);
-@import "tailwindcss/utilities.css";
- 
+@import "tailwindcss";
 @import "nativewind/theme";
-
 @import "@tera/tailwind-config/theme";
+
+@source "./ui/*.{ts,tsx}";
+
+@variant dark (&:is(.dark *));
+@variant dark (@media (prefers-color-scheme: dark));
